reupload source code & package
try to fix iOS videos tag problem, and weather icon's simple request adjust

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,7 +41,7 @@ $smooth: #f1f2f6;
 
         display: none!important;
       
-        -webkit-appearance: none;
+        -webkit-appearance: none !important;
       
       }
       
@@ -49,7 +49,7 @@ $smooth: #f1f2f6;
       
         display: none!important;
       
-        -webkit-appearance: none;
+        -webkit-appearance: none !important;
       
       }
       
@@ -57,7 +57,7 @@ $smooth: #f1f2f6;
       
         display: none!important;
       
-        -webkit-appearance: none;
+        -webkit-appearance: none !important;
       
       }
 }
